[gd_scene load_steps=3 format=3 uid="uid://dtjqbmoihy0gj"]

[ext_resource type="Script" uid="uid://bx6ki16kfjy8b" path="res://components/augment_card_choice/augment_card_choice.gd" id="1_swb2d"]
[ext_resource type="PackedScene" uid="uid://dedy0np6iv4i8" path="res://components/augment_card/augment_card.tscn" id="2_birt5"]

[node name="AugmentCardChoice" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_swb2d")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="FirstCard" parent="CenterContainer/HBoxContainer" instance=ExtResource("2_birt5")]
unique_name_in_owner = true
layout_mode = 2

[node name="SecondCard" parent="CenterContainer/HBoxContainer" instance=ExtResource("2_birt5")]
unique_name_in_owner = true
layout_mode = 2

[node name="ThirdCard" parent="CenterContainer/HBoxContainer" instance=ExtResource("2_birt5")]
unique_name_in_owner = true
layout_mode = 2
